# dotfiles

./: .gitignore  CLAUDE.md  Justfile  MIGRATION-PLAN.md  README.md  darwin-configuration.nix  flake.nix  gitignore  home.nix
common/: home.nix
common/claude/: CLAUDE.md  settings.json
common/claude/commands/: gtfd.md
common/ghostty/: config
common/git/: config
common/gtfd/: SKILL.md
common/karabiner/: karabiner.json
common/network/: README.md  aliases.nix
common/shell/: p10k.zsh  sunshine.zsh  zshrc
common/ssh/: hosts
common/synology-drive/: blacklist.filter
config/: adguard-for-safari.json
docs/superpowers/plans/: 2026-03-24-thinkcentre-architecture-v2.md  2026-03-27-legal-assistant-whatsapp.md  2026-04-03-general-assistant.md  2026-04-15-gatus-monitoring.md
docs/superpowers/specs/: 2026-03-24-thinkcentre-architecture-v2-design.md  2026-03-27-legal-assistant-whatsapp-design.md  2026-04-15-gatus-monitoring-design.md
dotfiles/git/: config  ignore
dotfiles/shell/: zshrc
hosts/: acasa.nix  dell.nix  macbook.nix
hosts/acasa/: flake.nix
hosts/betania/: flake.nix
hosts/macbook/: flake.nix
hosts/macbook/onepassword-export/: README.md  RECOVERY.md  export.sh  launchd.nix
hosts/nix-2/: flake.nix
hosts/thinkcentre/: Justfile  README.md  SYNCTHING.md  flake.nix  gaming-vm.nix  hardware-configuration.nix
hosts/thinkcentre/anki/bot/: Dockerfile  main.py  pyproject.toml
hosts/thinkcentre/anki/bot/curricula/: pl.json
hosts/vm/: cloud-init.yaml
modules/: common.nix
secrets/: op-service-account-token.age  secrets.nix
(+112 files in other folders)
